# Adaptive-Navigation-of-Land-Robots

./: .gitignore
Weekly Reports/: 1-Project Planning 16.10.23.md  2-Development and Integration 23.10.23.md  3-Mecanum Drive Development 29.10.2023.md  Project Planning 16.10.23.md
routewise_ws/src/rw_bringup/: package.xml  setup.cfg  setup.py
routewise_ws/src/rw_description/: package.xml  setup.cfg  setup.py
routewise_ws/src/rw_description/rw_description/mesh/: mecanum_wheel.stl
routewise_ws/src/rw_description/rw_description/nodes/: geometry_check_node.py
routewise_ws/src/rw_description/rw_description/urdf/: geometry_check.bash  mecanum_wheel.xacro  routewise.urdf  routewise.urdf.xacro  routewise_core.xacro  routewise_material.xacro
routewise_ws/src/rw_gz_plugins/: CMakeLists.txt  package.xml
routewise_ws/src/rw_gz_plugins/src/: mecanum_drive.cpp
routewise_ws/src/rw_simulation/: package.xml  setup.cfg  setup.py
routewise_ws/src/rw_simulation/launch/: gazebo_launch.py
routewise_ws/src/rw_simulation/rw_simulation/gazebo_maps/: initial_map  initial_map.world
routewise_ws/src/rw_teleop/: package.xml  setup.cfg  setup.py
routewise_ws/src/rw_teleop/rw_teleop/: teleop_twist.py
